Bug 1135655 - bump up tab sharing dimension defaults to match screensharing r=jesup, a=gavin

--HG--
extra : rebase_source : 88a85f8ccbc01ae2af60350b73e24fe7ed73b019